# fixed-wing-bspline-trajectory

./: README.md
Solution A-Ge2.5/: Bspline.cpp  Bspline.h  CMakeLists.txt  DataTypes.h  README.md  TrajectoryGenerator.cpp  TrajectoryGenerator.h  TrajectoryOptimizer.cpp  TrajectoryOptimizer.h  main.cpp
Solution B- ClOp4/: README.md  cmake_file.txt  readme_md.md
Solution B- ClOp4/examples/: example_usage.cpp
Solution B- ClOp4/include/: fixed_wing_bspline_trajectory.h  trajectory_optimizer.h
Solution B- ClOp4/scripts/: visualization_script.py
Solution B- ClOp4/src/: fixed_wing_bspline_trajectory.cpp  trajectory_optimizer.cpp
